fix text overflow gradient

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -583,11 +583,10 @@ body {
   top: 9em;
   width: 100%;
   height: 3em;
-  /* background: -webkit-linear-gradient(rgba(255,255,255,0), white); */
-  background: -webkit-linear-gradient(rgba(255,255,255,0), #bbdba9);
-  background: -o-linear-gradient(rgba(255,255,255,0),  #bbdba9);
-  background: -moz-linear-gradient(rgba(255,255,255,0),  #bbdba9);
-  background: linear-gradient(rgba(255,255,255,0),  #bbdba9);
+  background: -webkit-linear-gradient(rgba(187,218,169,0), #bbdba9);
+  background: -o-linear-gradient(rgba(187,218,169,0),  #bbdba9);
+  background: -moz-linear-gradient(rgba(187,218,169,0),  #bbdba9);
+  background: linear-gradient(rgba(187,218,169,0),  #bbdba9);
 }
 .overflow-shadow2 {
   position: absolute;
